k8s-yaml/deploy_example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    app.kubernetes.io/name: django-app
    owner: forluc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: django-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-app
        owner: forluc
    spec:
      containers:
        - name: django
          image: forluc/django_app
          ports:
            - containerPort: 80
