k8s-yaml/service_example.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-deployment
  labels:
    app.kubernetes.io/name: django-app
spec:
  type: ClusterIP
  ports:
    - name: external-port
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: django-app
